--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -63,7 +63,7 @@ a{
 }
 
 .offset {
-    height: 54px;
+    height: 100px;
 }
 
 /* CONTENT */
@@ -85,6 +85,14 @@ a{
     background-color: #199fd7;
     border-radius: 0px;
     border: 2px solid #ffffff;
+}
+
+.alert {
+    border-radius: 0px;
+}
+
+.btn {
+    border-radius: 0px;
 }
 
 .btn-home:hover, .btn-home:focus {
@@ -119,4 +127,12 @@ a{
 
 .match-counter p {
     font-size: 1.2em;
+}
+
+.login-container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    max-width: 500px;
+    margin-left: calc(50% - 250px);
+    background-color: white;
 }
