--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -142,6 +142,14 @@ a{
     background-color: white;
 }
 
+
+.default-container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    max-width: 1000px;
+    background-color: white;
+}
+
 .register-step {
     display: none;
 }
