--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -34,6 +34,11 @@ a{
 .navbar-default .navbar-brand {
     color: #737373;
     font-size: 1.7em;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
 }
 
 .navbar-default .navbar-brand b {
@@ -48,6 +53,11 @@ a{
 .navbar-default .navbar-nav > li > a {
     color: #9b9b9b;
     border-bottom: 4px solid transparent;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
@@ -81,10 +91,14 @@ a{
     height: 100px;
     width: 250px;
     font-size: 22px;
-
     background-color: #199fd7;
     border-radius: 0px;
     border: 2px solid #ffffff;
+    -webkit-transition: all .1s;
+    -moz-transition: all .1s;
+    -ms-transition: all .1s;
+    -o-transition: all .1s;
+    transition: all .1s;
 }
 
 .alert {
@@ -98,6 +112,11 @@ a{
 
 .btn {
     border-radius: 0px;
+    -webkit-transition: all .1s;
+    -moz-transition: all .1s;
+    -ms-transition: all .1s;
+    -o-transition: all .1s;
+    transition: all .1s;
 }
 
 .btn-home:hover, .btn-home:focus {
@@ -152,4 +171,13 @@ a{
 
 .register-step {
     display: none;
+}
+
+.login-register {
+    float: right;
+    margin-top: 10px;
+}
+
+.login-register a{
+    color: #2a6496;
 }
