changed applicant page design and show/hide by CV

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -10,8 +10,6 @@
     display: none;
 }
 
-
-.bg-custom {
-    padding: 20px;
-    background-color: white;
+.vacature-button-closed {
+    display: none;
 }
