--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -165,6 +165,7 @@ body {
 .default-container {
     padding: 10px;
     padding-top: 1px;
+    padding-right: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: white;
@@ -253,14 +254,19 @@ body {
 }
 
 .update-post {
-    height: 55px;
+    height: 75px;
     margin: 5px;
+    padding: 10px;
     margin-bottom: 15px;
     width: 100%;
 }
 
 .update-post:last-child {
     margin-bottom: 5px;
+}
+
+.post-deletable:hover {
+    background-color: rgba(204, 204, 204, 0.45);
 }
 
 .update-post .update-image {
@@ -294,10 +300,34 @@ body {
     height: 55px;
     border-radius: 50px;
     text-align: center;
-    line-height: 55px;
+    line-height: 60px;
     font-size: 2.5em;
     color: white;
     background-color: #2aabd2;
+}
+
+.update-post .update-image .delete-update {
+    width: 100%;
+    height: 55px;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 60px;
+    font-size: 2em;
+    color: white;
+    background-color: #d9534f;
+    display: none;
+}
+
+.post-deletable:hover .update-image .delete-update {
+    display: block;
+}
+
+.post-deletable:hover .update-image .identifier {
+    display: none;
+}
+
+.message-wrapper {
+    margin-top: 10px;
 }
 
 /* Custom style for Sollicitant pages */
