--- a/webroot/css/base.css
+++ b/webroot/css/base.css
@@ -6,6 +6,8 @@
  *    user zoom.
  */
 
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
 html {
     font-family: sans-serif; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
