--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
 html,
 body {
     height: 100%;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Raleway', sans-serif !important;
 
     background: linear-gradient(
             rgba(0, 0, 0, 0.7),
