--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Raleway:500,600');
 
 html,
 body {
@@ -7,6 +7,7 @@ body {
 
 body {
     font-family: 'Raleway', sans-serif !important;
+    font-weight: 500;
 
     background: linear-gradient(
             rgba(0, 0, 0, 0.7),
