--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -350,3 +350,9 @@ body {
 .vacature-button-closed {
     display: none;
 }
+
+#map {
+    width: 100%;
+    height: 200px;
+    background-color: grey;
+}
